# rosegarden-official

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: ci codecov.yml  ci-codecov.yml  ci-mac.yml  ci-windows.yml  ci.yml  sonarcloud.yml
src/gui/general/: ActionData.cpp
src/sound/: DSSIPluginFactory.cpp  DSSIPluginFactory.h  DSSIPluginInstance.cpp  DSSIPluginInstance.h  LADSPAPluginFactory.h  LADSPAPluginInstance.h
test/: CMakeLists.txt  realtime.cpp
